2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/SongDatabase.cs:

	Small cleanup.

2005-01-07  Jorn Baayen  <jbaayen@gnome.org>

	* NEWS:
	R src/ActionThread.cs:
	* src/FileUtils.cs:
	* src/Makefile.am:
	* src/Muine.cs:
	* src/PlaylistWindow.cs:
	* src/ProgressWindow.cs:
	* src/SongDatabase.cs:
	* src/ThreadBase.cs:

	Run regular folder imports in a thread too, clean up
	thread stuff.

2005-01-07  Jorn Baayen  <jbaayen@gnome.org>

	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/Album.cs:
	* src/CoverDatabase.cs:
	* src/Muine.cs:
	* src/Player.cs:
	* src/PlaylistWindow.cs:
	* src/Song.cs:
	* src/SongDatabase.cs:

	Redo SongDatabase threading stuff. UI is now fully responsive
	while it brings the library in sync with the disc.

2005-01-07  Jorn Baayen  <jbaayen@gnome.org>

	* DBusLib/Player.cs:
	* PluginLib/IPlayer.cs:
	* PluginLib/ISong.cs:
	* PluginLib/Plugin.cs:

	Reduce indentation level.

2005-01-07  Jorn Baayen  <jbaayen@gnome.org>

	* src/CoverDatabase.cs:
	* src/Song.cs:

	Fix thread safety.

2005-01-07  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:
	* src/Song.cs:

	Handle album cover properly on song change.

2005-01-07  Jorn Baayen  <jbaayen@gnome.org>

	* src/FileSelector.cs:
	* src/PlaylistWindow.cs:
	* src/Song.cs:

	Allow selecting multiple folders on import.

2005-01-07  Tamara Roberson  <foxxygirltamara@gmail.com>

	* libmuine/pointer-list-view.c:
	* libmuine/pointer-list-view.h:
	* src/HandleView.cs:
	
	Implemented some functions in C#.

2005-01-07  Tamara Roberson  <foxxygirltamara@gmail.com>

	* src/HandleView.cs:
	
	Some code cleanup.

2005-01-07  Tamara Roberson  <foxxygirltamara@gmail.com>

	* src/Album.cs:
	* src/Item.cs:
	* src/Makefile.am:
	* src/Song.cs:
	
	Added Item, a base class for Album and Song.

2005-01-07  Tamara Roberson  <foxxygirltamara@gmail.com>

	* src/CoverGetter.cs:
	
	Use Amazon namespace.

2005-01-07  Jorn Baayen  <jbaayen@gnome.org>

	* src/Muine.cs:

	Small cleanup.
